Update na Página Inicial e adição de favicons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <!-- https://www.jsdelivr.com/package/npm/modern-normalize -->
   <link rel="stylesheet" href="modern-normalize.css">
   <link rel="stylesheet" href="style.css">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 </head>
 <!-- https://stackoverflow.com/questions/8330559/hover-effects-using-css3-touch-events -->
 <body ontouchstart="">
@@ -17,5 +21,6 @@
       <li><a href="glowing-gradient-button/index.html">Glowing gradient button</a></li>
     </ul>
   </section>
+  <p>Por: Guilherme Rodrigues</p>
 </body>
 </html>
