Adicionado SASS na Página Inicial

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 </head>
 <!-- https://stackoverflow.com/questions/8330559/hover-effects-using-css3-touch-events -->
 <body ontouchstart="">
-  <section>
-    <h2>Projetos CSS</h2>
-    <ul>
-      <li><a href="glowing-gradient-button/index.html">Glowing gradient button</a></li>
+  <section class="project-list">
+    <h2 class="title">Projetos CSS</h2>
+    <ul class="list">
+      <li class="list-item"><a href="glowing-gradient-button/index.html">Glowing gradient button</a></li>
     </ul>
   </section>
-  <p>Por: Guilherme Rodrigues</p>
+  <p class="author">Por: Guilherme Rodrigues</p>
 </body>
 </html>
