Update na Página Inicial

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
       <li class="list-item"><a href="glowing-gradient-button/index.html">Glowing gradient button</a></li>
     </ul>
   </section>
-  <p class="author">Por: Guilherme Rodrigues</p>
+  <p class="author">Por: <a href="https://github.com/guilhermerodrigues680" target="_blank">Guilherme Rodrigues</a></p>
 </body>
 </html>
