Implementado desing de menu do figma

--- a/figma-design/index.html
+++ b/figma-design/index.html
@@ -10,10 +10,41 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <!-- https://stackoverflow.com/questions/8330559/hover-effects-using-css3-touch-events -->
+<!-- TODO: Adicionar classe overflow-hidden se o menu estiver aberto -->
+<!-- <body ontouchstart="" class="overflow-hidden"> -->
 <body ontouchstart="">
-  <header class="header"></header>
+  <header class="header">
+    <!-- TODO: Adicionar classe hidden se o menu estiver aberto -->
+    <svg class="header__icon-menu hidden" width="46" height="33" viewBox="0 0 46 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M3 16.3334H43" stroke="#5C5C5C" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
+      <path d="M3 3H43" stroke="#5C5C5C" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
+      <path d="M3 29.6666H43" stroke="#5C5C5C" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+    <svg class="header__icon-menu" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M2.85785 31.1421L31.1421 2.85782" stroke="#5C5C5C" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
+      <path d="M2.85785 2.85779L31.1421 31.1421" stroke="#5C5C5C" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+  </header>
+
   <main>
-    <div class="shadow"></div>
+    <aside class="navigation-drawer">
+      <div class="navigation-drawer__content">
+        <div class="navigation-drawer__links">
+          <div>
+            <svg width="20" height="22" viewBox="0 0 20 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M7 21V11H13V21" stroke="#5C5C5C" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M1 8L10 1L19 8V19C19 19.5304 18.7893 20.0391 18.4142 20.4142C18.0391 20.7893 17.5304 21 17 21H3C2.46957 21 1.96086 20.7893 1.58579 20.4142C1.21071 20.0391 1 19.5304 1 19V8Z" stroke="#5C5C5C" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+            <a href="#">Home</a>
+          </div>
+        </div>
+
+        <div class="navigation-drawer__footer">
+          <a href="#">Política de Privacidade</a>
+        </div>
+      </div>
+    </aside>
+
     <section class="section-home">
       <div class="content">
         <h1>Meu novo site</h1>
@@ -21,6 +52,7 @@
       </div>
     </section>
   </main>
+
   <footer></footer>
 </body>
 </html>
