--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <ul class="list">
       <li class="list-item"><a href="glowing-gradient-button/index.html">Glowing gradient button</a></li>
       <li class="list-item"><a href="light-neumorphic-loader/index.html">Light neumorphic loader</a></li>
+      <li class="list-item"><a href="figma-design/index.html">Figma design to website</a></li>
     </ul>
   </section>
   <p class="author">Por: <a href="https://github.com/guilhermerodrigues680" target="_blank">Guilherme Rodrigues</a></p>
