Adicionada transição na abertura do menu

--- a/figma-design/index.html
+++ b/figma-design/index.html
@@ -17,14 +17,14 @@
       <path d="M3 3H43" stroke="#5C5C5C" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
       <path d="M3 29.6666H43" stroke="#5C5C5C" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
     </svg>
-    <svg id="header-icon-menu-close" class="header__icon-menu hidden" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M2.85785 31.1421L31.1421 2.85782" stroke="#5C5C5C" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
-      <path d="M2.85785 2.85779L31.1421 31.1421" stroke="#5C5C5C" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
+    <svg id="header-icon-menu-close" class="header__icon-menu hidden" width="46" height="36" viewBox="0 0 46 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M9 32.2843L37.2843 4.00003" stroke="#5C5C5C" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
+      <path d="M9 4L37.2843 32.2843" stroke="#5C5C5C" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
     </svg>
   </header>
 
   <main>
-    <aside id="navigation-drawer" class="navigation-drawer hidden">
+    <aside id="navigation-drawer" class="navigation-drawer invisible opacity-0">
       <div class="navigation-drawer__content">
         <div class="navigation-drawer__links">
           <div>
