Melhorada transição na abertura do menu com animate.css

--- a/figma-design/index.html
+++ b/figma-design/index.html
@@ -7,6 +7,8 @@
   <title>Projeto CSS</title>
   <!-- https://www.jsdelivr.com/package/npm/modern-normalize -->
   <link rel="stylesheet" href="modern-normalize.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> -->
+  <link rel="stylesheet" href="vendor/animate.css/4.1.1/animate.css"/>
   <link rel="stylesheet" href="style.css">
 </head>
 <!-- https://stackoverflow.com/questions/8330559/hover-effects-using-css3-touch-events -->
@@ -24,7 +26,7 @@
   </header>
 
   <main>
-    <aside id="navigation-drawer" class="navigation-drawer invisible opacity-0">
+    <aside id="navigation-drawer" class="navigation-drawer">
       <div class="navigation-drawer__content">
         <div class="navigation-drawer__links">
           <div>
