Adicionada barra de consetimento cookies

--- a/figma-design/index.html
+++ b/figma-design/index.html
@@ -52,6 +52,12 @@
     </section>
   </main>
 
+  <div class="cookies-consent-bar">
+    <p>Este site usa cookies para garantir que você obtenha a melhor experiência em nosso site.</p>
+    <p><a href="#">Política de Cookies</a></p>
+    <button class="btn btn--badge cookies-consent-bar__btn">Entendi</button>
+  </div>
+
   <footer></footer>
 
   <script src="script.js"></script>
