Adicionado registro de consetimento cookies

--- a/figma-design/index.html
+++ b/figma-design/index.html
@@ -52,10 +52,10 @@
     </section>
   </main>
 
-  <div class="cookies-consent-bar">
+  <div id="cookies-consent-bar" class="cookies-consent-bar hidden">
     <p>Este site usa cookies para garantir que você obtenha a melhor experiência em nosso site.</p>
     <p><a href="#">Política de Cookies</a></p>
-    <button class="btn btn--badge cookies-consent-bar__btn">Entendi</button>
+    <button id="cookies-consent-bar-btn-got-it" class="btn btn--badge cookies-consent-bar__btn">Entendi</button>
   </div>
 
   <footer></footer>
