Adicionada imagens ao GRID

--- a/figma-design/teste-grid.html
+++ b/figma-design/teste-grid.html
@@ -20,7 +20,9 @@
     <div class="frame frame-5 frame--right"></div>
     <div class="frame frame-6 frame--left"></div>
     <div class="frame frame-7"></div>
-    <div class="frame frame-8"></div>
+    <div class="frame frame-8">
+      <button>Saber mais</button>
+    </div>
   </div>
 </body>
 </html>
