Adicionada GRID do mobile

--- a/figma-design/index.html
+++ b/figma-design/index.html
@@ -49,6 +49,19 @@
         <h1>Meu novo site</h1>
         <h2>usando o figma</h2>
       </div>
+
+      <div class="grid-area">
+        <div class="frame frame-1"></div>
+        <div class="frame frame-2 frame--right"></div>
+        <div class="frame frame-3 frame--left"></div>
+        <div class="frame frame-4"></div>
+        <div class="frame frame-5 frame--right"></div>
+        <div class="frame frame-6 frame--left"></div>
+        <div class="frame frame-7"></div>
+        <div class="frame frame-8">
+          <button>Saber mais</button>
+        </div>
+      </div>
     </section>
   </main>
 
