Adicionad wireframe secao 2 e footer

--- a/figma-design/index.html
+++ b/figma-design/index.html
@@ -63,6 +63,8 @@
         </div>
       </div>
     </section>
+
+    <section class="section-2"></section>
   </main>
 
   <div id="cookies-consent-bar" class="cookies-consent-bar hidden">
