--- a/figma-design/index.html
+++ b/figma-design/index.html
@@ -64,7 +64,33 @@
       </div>
     </section>
 
-    <section class="section-2"></section>
+    <section class="section-2">
+      <div class="section-2__top-image">
+        <img src="img/section-2-top-image.svg" alt="icone mensagem">
+      </div>
+
+      <input type="text" placeholder="Nome">
+
+      <div class="select">
+        <div class="select__container">
+          <div class="select__trigger">
+            <span>Ocupação</span>
+            <span class="chevron"></span>
+          </div>
+
+          <div class="select__options">
+            <span class="select__option selected" data-value="valor1">Valor 1</span>
+            <span class="select__option" data-value="valor2">Valor 2</span>
+            <span class="select__option" data-value="valor3">Valor 3</span>
+          </div>
+        </div>
+      </div>
+
+      <textarea class="message-text" placeholder="Mensagem"></textarea>
+
+      <button>Enviar</button>
+
+    </section>
   </main>
 
   <div id="cookies-consent-bar" class="cookies-consent-bar hidden">
