--- a/figma-design/index.html
+++ b/figma-design/index.html
@@ -74,12 +74,13 @@
       <div class="select">
         <div class="select__container">
           <div class="select__trigger">
-            <span>Ocupação</span>
+            <span class="selected__text">Ocupação</span>
             <span class="chevron"></span>
           </div>
 
           <div class="select__options">
-            <span class="select__option selected" data-value="valor1">Valor 1</span>
+            <!-- <span class="select__option selected" data-value="valor1">Valor 1</span> -->
+            <span class="select__option" data-value="valor1">Valor 1</span>
             <span class="select__option" data-value="valor2">Valor 2</span>
             <span class="select__option" data-value="valor3">Valor 3</span>
           </div>
